Fix logo width to prevent width jumping while loading

--- a/styles/1_header.styl
+++ b/styles/1_header.styl
@@ -150,8 +150,10 @@
     border-bottom none
 
   object, img
+    width 90px
     height 140px
     pointer-events none
 
     @media (max-width: 480px)
+      width 71px
       height 110px
